fix: adjust z-index of main-header

--- a/packages/packages.css
+++ b/packages/packages.css
@@ -41,8 +41,7 @@ main{
   background: #ff1b68;
   color: white;
   padding: 8px;
-  font-size: 16px;
-  width: 160px;
+  font-size: 12px;
   text-transform: uppercase;
   border-radius: 10px;
   margin: 20px;
