--- a/shared.css
+++ b/shared.css
@@ -18,6 +18,7 @@ body {
   width: 100%;
   background: #2ddf5c;
   padding: 8px 16px;
+  z-index: 1; 
 }
 
 .main-header__brand {
